deployments/kubernetes/libretranslate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate
  labels:
    app: libretranslate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      containers:
      - name: libretranslate
        image: libretranslate/libretranslate:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: http
