deployments/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - port: 50051
    targetPort: grpc
    protocol: TCP
    name: grpc
  - port: 9090
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: app
