deployments/kubernetes/libretranslate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate
  labels:
    app: libretranslate
spec:
  type: ClusterIP
  ports:
  - port: 5002
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: libretranslate
