deployments/kubernetes/media-streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-streaming
  labels:
    app: media-streaming
spec:
  type: ClusterIP
  ports:
  - port: 8085
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: media-streaming
