deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-ovasabi
  labels:
    app: master-ovasabi
spec:
  type: ClusterIP
  ports:
  - port: 50051
    targetPort: grpc
    protocol: TCP
    name: grpc
  - port: 9090
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: master-ovasabi
