deployments/kubernetes/ws-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway
  labels:
    app: ws-gateway
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ws-gateway
