deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ovasabi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: api.ovasabi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: master-ovasabi
            port:
              name: grpc
